--- a/zshrc.template
+++ b/zshrc.template
@@ -70,7 +70,7 @@ ZSH_THEME="robbyrussell"
 # Custom plugins may be added to $ZSH_CUSTOM/plugins/
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
-plugins=(git)
+plugins=(git asdf)
 
 source $ZSH/oh-my-zsh.sh
 
@@ -101,3 +101,28 @@ source $ZSH/oh-my-zsh.sh
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 
 eval "$(starship init zsh)"
+echo -e "\n. $(brew --prefix asdf)/asdf.sh" >> ${ZDOTDIR:-~}/.zshrc
+
+
+. /opt/homebrew/opt/asdf/asdf.sh
+export PATH="/opt/homebrew/opt/erlang@23/bin:$PATH"
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+# The next line updates PATH for the Google Cloud SDK.
+if [ -f '/Users/enriquelopez/Downloads/google-cloud-sdk/path.zsh.inc' ]; then . '/Users/enriquelopez/Downloads/google-cloud-sdk/path.zsh.inc'; fi
+
+# The next line enables shell command completion for gcloud.
+if [ -f '/Users/enriquelopez/Downloads/google-cloud-sdk/completion.zsh.inc' ]; then . '/Users/enriquelopez/Downloads/google-cloud-sdk/completion.zsh.inc'; fi
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+. /opt/homebrew/opt/asdf/asdf.sh
+
+. /opt/homebrew/opt/asdf/asdf.sh
